# phantom_object_generation

./: .gitignore  README.md  download_dataset.py  example.py  laz_to_obj.py  main.py  path_replay.py  pyproject.toml  run.py  test.py
bench2drive-phantom-objects/: __init__.py  cli.py  download_dataset.py  laz_to_obj.py  lidar_recorder.py
bench2drive_phantom_objects/: __init__.py  cli.py  dataset_builder.py  download_dataset.py  laz_to_obj.py  laz_utils.py  lidar_recorder.py
