[project]
name = "bench2drive-phantom-objects"
version = "0.1.1"
description = "Phantom object generation for bench2drive dataset"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
dependencies = [
    "carla>=0.9.16",
    "huggingface-hub>=1.4.1",
    "laspy>=2.7.0",
    "laszip>=0.3.0",
    "lazrs>=0.8.1",
    "numpy>=2.4.2",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "setuptools",
]

[project.scripts]
bench2drive-phantom = "bench2drive_phantom_objects.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bench2drive_phantom_objects"]